@@ -77,7 +77,7 @@
  */
 
 (function() {
-  var $, $$, Anonymize, ArchiveLink, AutoGif, Conf, Config, DeleteLink, DownloadLink, ExpandComment, ExpandThread, Favicon, FileInfo, Filter, Get, ImageExpand, ImageHover, Keybinds, Main, Menu, Nav, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, QuoteThreading, Quotify, Redirect, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, log, _base;
+  var $, $$, Anonymize, ArchiveLink, AutoGif, Conf, Config, DeleteLink, DownloadLink, ExpandComment, ExpandThread, Favicon, FileInfo, Filter, Get, ImageExpand, ImageHover, Keybinds, Main, Markdown, Menu, Nav, Options, Prefetch, QR, QuoteBacklink, QuoteCT, QuoteInline, QuoteOP, QuotePreview, QuoteThreading, Quotify, Redirect, ReplyHiding, ReportLink, RevealSpoilers, Sauce, StrikethroughQuotes, ThreadHiding, ThreadStats, Time, TitlePost, UI, Unread, Updater, Watcher, d, g, log, _base;
 
   Config = {
     main: {
@@ -136,7 +136,8 @@
         'Remember Subject': [false, 'Remember the subject field, instead of resetting after posting.'],
         'Remember Spoiler': [false, 'Remember the spoiler state, instead of resetting after posting.'],
         'Hide Original Post Form': [true, 'Replace the normal post form with a shortcut to open the QR.'],
-        'Sage on /jp/': [true, 'Uses sage by default on /jp/']
+        'Sage on /jp/': [true, 'Uses sage by default on /jp/'],
+        'Markdown': [false, 'Code, italic, bold, italic bold, double struck - `, *, **, ***, ||, respectively. _ can be used instead of *']
       },
       Quoting: {
         'Quote Backlinks': [true, 'Add quote backlinks'],
@@ -2512,7 +2513,7 @@
         name: reply.name,
         email: reply.email,
         sub: reply.sub,
-        com: reply.com,
+        com: Conf['Markdown'] ? Markdown.format(reply.com) : reply.com,
         upfile: reply.file,
         spoiler: reply.spoiler,
         mode: 'regist',
@@ -5087,6 +5088,118 @@
     },
     resize: function() {
       return ImageExpand.style.textContent = ".fitheight img[data-md5] + img {max-height:" + d.documentElement.clientHeight + "px;}";
+    }
+  };
+
+  Markdown = {
+    format: function(text) {
+      var pattern, tag, tag_patterns;
+      tag_patterns = {
+        bi: /(\*\*\*|___)(?=\S)([^\r\n]*?\S)\1/g,
+        b: /(\*\*|__)(?=\S)([^\r\n]*?\S)\1/g,
+        i: /(\*|_)(?=\S)([^\r\n]*?\S)\1/g,
+        code: /(`)(?=\S)([^\r\n]*?\S)\1/g,
+        ds: /(\|\||__)(?=\S)([^\r\n]*?\S)\1/g
+      };
+      for (tag in tag_patterns) {
+        pattern = tag_patterns[tag];
+        text = text.replace(pattern, Markdown.unicode_convert);
+      }
+      return text;
+    },
+    unicode_convert: function(str, tag, inner) {
+      var c, charcode, charcodes, codepoints, codes, fmt, i, unicode_text;
+      if (tag === "_" || tag === "*") {
+        fmt = "i";
+      } else if (tag === "__" || tag === "**") {
+        fmt = "b";
+      } else if (tag === "***" || tag === "___") {
+        fmt = "bi";
+      } else if (tag === "||") {
+        fmt = "ds";
+      } else {
+        if (tag === "`" || tag === "```") {
+          fmt = "code";
+        }
+      }
+      codepoints = {
+        b: [0x1D7CE, 0x1D400, 0x1D41A],
+        i: [0x1D7F6, 0x1D434, 0x1D44E],
+        bi: [0x1D7CE, 0x1D468, 0x1D482],
+        code: [0x1D7F6, 0x1D670, 0x1D68A],
+        ds: [0x1D7D8, 0x1D538, 0x1D552]
+      };
+      charcodes = (function() {
+        var _i, _len, _results;
+        _results = [];
+        for (i = _i = 0, _len = inner.length; _i < _len; i = ++_i) {
+          c = inner[i];
+          _results.push(inner.charCodeAt(i));
+        }
+        return _results;
+      })();
+      codes = (function() {
+        var _i, _len, _results;
+        _results = [];
+        for (_i = 0, _len = charcodes.length; _i < _len; _i++) {
+          charcode = charcodes[_i];
+          if (charcode >= 48 && charcode <= 57) {
+            _results.push(charcode - 48 + codepoints[fmt][0]);
+          } else if (charcode >= 65 && charcode <= 90) {
+            _results.push(charcode - 65 + codepoints[fmt][1]);
+          } else if (charcode >= 97 && charcode <= 122) {
+            if (charcode === 104 && tag === "i") {
+              _results.push(0x210E);
+            } else {
+              _results.push(charcode - 97 + codepoints[fmt][2]);
+            }
+          } else {
+            _results.push(charcode);
+          }
+        }
+        return _results;
+      })();
+      unicode_text = codes.map(Markdown.ucs2_encode).join("");
+      if (tag === "code") {
+        unicode_text = unicode_text.replace(/\x20/g, "\xA0");
+      }
+      return unicode_text;
+    },
+    ucs2_encode: function(value) {
+      /*
+          From Punycode.js: https://github.com/bestiejs/punycode.js
+      
+          Copyright Mathias Bynens <http://mathiasbynens.be/>
+      
+          Permission is hereby granted, free of charge, to any person obtaining
+          a copy of this software and associated documentation files (the
+          "Software"), to deal in the Software without restriction, including
+          without limitation the rights to use, copy, modify, merge, publish,
+          distribute, sublicense, and/or sell copies of the Software, and to
+          permit persons to whom the Software is furnished to do so, subject to
+          the following conditions:
+      
+          The above copyright notice and this permission notice shall be
+          included in all copies or substantial portions of the Software.
+      
+          THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+          EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF`
+          MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+          NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+          LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+          OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+          WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+      */
+
+      var output;
+      output = "";
+      if (value > 0xFFFF) {
+        value -= 0x10000;
+        output += String.fromCharCode(value >>> 10 & 0x3FF | 0xD800);
+        value = 0xDC00 | value & 0x3FF;
+      }
+      output += String.fromCharCode(value);
+      return output;
     }
   };
 
